@@ -3,6 +3,10 @@
     only there for debugging purposes and was consuming a huge amount
     of CPU time. (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=17799).
+  * Sometimes black was still written as transparent, when the PNG
+    encoder receives an image with image->matte on but no transparent
+    pixels are present. (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=17913);
 
 2011-01-24  6.6.7-3 Cristy  <quetzlzacatenango@image...>
   * Remove memory leak from ThrowFileException() macro (reference
